Fix: The operator between table width and height fields should be aligned properly.

--- a/packages/ckeditor5-table/theme/tableproperties.css
+++ b/packages/ckeditor5-table/theme/tableproperties.css
@@ -13,6 +13,10 @@
 		&.ck-table-properties-form__dimensions-row {
 			align-items: center;
 
+			& .ck-table-properties-form__dimension-operator {
+				flex-grow: 0;
+			}
+
 			& .ck-labeled-view {
 				display: flex;
 				flex-direction: column-reverse;
